--- a/TinyControl.cabal
+++ b/TinyControl.cabal
@@ -48,13 +48,13 @@ Cabal-version:       >=1.2
 
 Library
   -- Modules exported by the library.
-  Exposed-modules:     TinyControl.Server, TinyControl.Packet
+  Exposed-modules:     TinyControl.Server
 
   -- Packages needed in order to build this package.
   Build-depends: base, containers, old-time, network, bytestring, transformers
 
   -- Modules not exported by this package.
-  -- Other-modules:
+  Other-modules: TinyControl.Packet, TinyControl.Common
 
   -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
   -- Build-tools:
