--- a/TinyControl.cabal
+++ b/TinyControl.cabal
@@ -48,7 +48,7 @@ Cabal-version:       >=1.2
 
 Library
   -- Modules exported by the library.
-  Exposed-modules:     TinyControl.Server
+  Exposed-modules:     TinyControl.Server, TinyControl.Client
 
   -- Packages needed in order to build this package.
   Build-depends: base >= 4, containers, old-time, network, bytestring, transformers == 0.3.0.0
@@ -63,6 +63,20 @@ Executable server
   -- hs-source-dirs:      executable-src
   -- .hs or .lhs file containing the Main module.
   Main-is:             ServerApp.hs
+
+  -- Packages needed in order to build this package.
+  Build-depends: base >= 4, containers, old-time, network, bytestring, transformers == 0.3.0.0
+
+  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
+  -- Build-tools:         alex, happy
+
+  -- Enable compiler warnings
+  --ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unrecognised-pragmas -fwarn-auto-orphans
+
+Executable client
+  -- hs-source-dirs:      executable-src
+  -- .hs or .lhs file containing the Main module.
+  Main-is:             ClientApp.hs
 
   -- Packages needed in order to build this package.
   Build-depends: base >= 4, containers, old-time, network, bytestring, transformers == 0.3.0.0
