--- a/TinyControl.cabal
+++ b/TinyControl.cabal
@@ -51,10 +51,10 @@ Library
   Exposed-modules:     TinyControl.Server, TinyControl.Client
 
   -- Packages needed in order to build this package.
-  Build-depends: base >= 4, containers, old-time, network, bytestring, transformers == 0.3.0.0
+  Build-depends: base >= 4, containers, old-time, network, bytestring, transformers == 0.3.0.0, time
 
   -- Modules not exported by this package.
-  Other-modules: TinyControl.Packet, TinyControl.Common
+  Other-modules: TinyControl.Packet, TinyControl.Common, TinyControl.Time
 
   -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
   -- Build-tools:
