--- a/TinyControl.cabal
+++ b/TinyControl.cabal
@@ -51,7 +51,7 @@ Library
   Exposed-modules:     TinyControl.Server, TinyControl.Client
 
   -- Packages needed in order to build this package.
-  Build-depends: base >= 4, containers, old-time, network, bytestring, transformers == 0.3.0.0, time
+  Build-depends: base >= 4, containers, network, bytestring, transformers == 0.3.0.0, time
 
   -- Modules not exported by this package.
   Other-modules: TinyControl.Packet, TinyControl.Common, TinyControl.Time
@@ -79,7 +79,7 @@ Executable client
   Main-is:             ClientApp.hs
 
   -- Packages needed in order to build this package.
-  Build-depends: base >= 4, containers, old-time, network, bytestring, transformers == 0.3.0.0
+  Build-depends: base >= 4, containers, network, bytestring, transformers == 0.3.0.0, time
 
   -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
   -- Build-tools:         alex, happy
