--- a/TinyControl.cabal
+++ b/TinyControl.cabal
@@ -51,7 +51,7 @@ Library
   Exposed-modules:     TinyControl.Server, TinyControl.Client
 
   -- Packages needed in order to build this package.
-  Build-depends: base >= 4, containers, network, bytestring, transformers == 0.3.0.0, time
+  Build-depends: base >= 4, containers, network, bytestring, transformers == 0.3.0.0, time, binary
 
   -- Modules not exported by this package.
   Other-modules: TinyControl.Packet, TinyControl.Common, TinyControl.Time
